Added FileChooser widget. Added 'As Designed' and 'Benchmark' Options to compare_model_run_file.py.

--- a/ipyrun/overheating-app.ipynb
+++ b/ipyrun/overheating-app.ipynb
@@ -47,8 +47,7 @@
     "\n",
     "def get_mfuser_initials():\n",
     "    user = getpass.getuser()\n",
-    "    return user[0]+user[2]\n",
-    "\n"
+    "    return user[0]+user[2]"
    ]
   },
   {
@@ -109,7 +108,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1cffe604bcf14680b749df7611033685",
+       "model_id": "5f9f8fff78e845a9bb2c6620f45ac0ac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -123,7 +122,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "144a5e0752ae4ac4bd13fd5f6cc17c61",
+       "model_id": "723e734163404e34b4670664dca75d67",
        "version_major": 2,
        "version_minor": 0
       },
@@ -137,7 +136,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ce45f203c56f4fdfb636db124d695bd0",
+       "model_id": "8b349c610e9d44af9e618a26c006f67c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -187,7 +186,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7bcca8148279418eb4bf482d67948817",
+       "model_id": "2af12d7c91ee4d21afacd4b9978ca3c6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -201,7 +200,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f847c6d1ab14902980a363700c82d2e",
+       "model_id": "64ddab71b0374996a699684e7e71f556",
        "version_major": 2,
        "version_minor": 0
       },
