Added support for ignoring files in RunApp, with the display_ignore property. Files that cannot be displayed are now automatically ignored by the DisplayFiles class.

--- a/ipyrun/ipyrun.ipynb
+++ b/ipyrun/ipyrun.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -607,13 +607,15 @@
     "            #    d.preview_fpth()\n",
     "                \n",
     "            fpths = [v for k,v in self.fpths_outputs.items()]\n",
-    "            no_display = ['jpg', 'png']\n",
+    "            if 'display_ignore' in self.config:\n",
+    "                display_ignore = self.config['display_ignore']\n",
+    "            else:\n",
+    "                display_ignore = []\n",
+    "                \n",
     "            if len(fpths)==0:\n",
     "                display(Markdown('select the file(s) that you would like to display from the \"outputs\" list above '))\n",
     "            else:\n",
-    "                display([os.path.splitext(fpth)[1] for fpth in fpths])\n",
-    "                display(fpths)\n",
-    "                display(DisplayFiles(fpths))\n",
+    "                display(DisplayFiles(fpths, fpths_ignore=display_ignore))\n",
     "                \n",
     "    def _show_log(self, sender):\n",
     "        with self.out:\n",
@@ -768,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +819,6 @@
     "        \n",
     "        for process in self.processes:\n",
     "            self.li.append(process['app'](process['config']))   \n",
-    "            #print(process['config'])\n",
     "        self.out = widgets.Output()\n",
     "\n",
     "    def _create_process(self, process_name, di):\n",
@@ -961,7 +962,6 @@
     "            return\n",
     "            \n",
     "        basenumbers = [process.split('_')[0] for process in self._get_process_names()]\n",
-    "        print(basenumbers)\n",
     "        current_num = 0\n",
     "        num_exists = True\n",
     "        new_process_name = \"\"\n",
@@ -1024,7 +1024,7 @@
     "        display(self.apps_layout)\n",
     "        \n",
     "    def _ipython_display_(self):\n",
-    "        self.display() \n",
+    "        self.display()\n",
     "\n",
     "class RunAppComparison(RunApp):\n",
     "        \n",
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1087,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cdae68029a2245f480889d4382e3708b",
+       "model_id": "c70010c3e06e41529c54133d8ec13da9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1101,7 +1101,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "39a20337c3594022aff2f02ce8988411",
+       "model_id": "1c2ec41499764bab816b3dfde1ce8f38",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1148,7 +1148,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2258593209524c959afc34927b2bcd7c",
+       "model_id": "a5946516f3c045c6bcf7255257e9244c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1162,7 +1162,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28462f563f9447d4b85982a7202b03c8",
+       "model_id": "3ea748bc251948ae927154334a2fe46e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1252,7 +1252,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "737fe6e270984565984e3ce1b2f1cf96",
+       "model_id": "5a879ccb5a9f4148a844405cde75d35f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1266,7 +1266,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "956c7c8c057141bb87354d5384042e89",
+       "model_id": "2ae0c8c297bf4d63bdd69da5ec7c192f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1280,7 +1280,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8c5d7f549ae94e5c80e35ee369a5d22e",
+       "model_id": "e02465f82d9641b0a9507488c393e32b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1294,7 +1294,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d60d161ba6a474786419f4110ddc817",
+       "model_id": "2e2e2c9eddb441e0a6c0534e82682d14",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1308,7 +1308,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ad9559f9f8bf4d3a870f33b31e99eae7",
+       "model_id": "762cfeac341b41d5b3a5aff4866be4ec",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1322,7 +1322,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "313854bb255e44fb8cfefdea73d84302",
+       "model_id": "842f347d5cb94394add25efe54521b12",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1336,7 +1336,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c197e2e0468f4563a0b7b57a2005598e",
+       "model_id": "61c6e5e5ab8440c4b3a5bc5630740c11",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1350,7 +1350,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b4348ce309b14f5a9020ac43fc030442",
+       "model_id": "686c85e0c924412e971c7af521034237",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1439,7 +1439,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "43c46e6fb7f345fc997cd6b74a1e35cf",
+       "model_id": "7287ee8f825446c7adeaebb074faeedf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1453,7 +1453,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4607afbaa44146e49e159878f3c32108",
+       "model_id": "7412ab2b11b14510921d30a5c8054467",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1467,7 +1467,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b48bf5259d8045c8bc86c106903bff61",
+       "model_id": "4bd1e3780ab442da9800e6639f6dacd0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1481,7 +1481,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "92adeac9af61468f974b52c68d2cc0bb",
+       "model_id": "2ab5e0446cc646da9a928c35481dd3bf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1495,7 +1495,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8145e9ff243f4f85ae77c28e9f266d1c",
+       "model_id": "14a41275bfb7421d83d93e9193546287",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1509,7 +1509,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "102585bd42c44e1cb08649ec92bf6cff",
+       "model_id": "ecb6b8d6e5384b4981f003836f7994b0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1523,7 +1523,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1543700816e94e82bfbd7e604b3f0a0f",
+       "model_id": "10e1a3c984d54064bed3c2fd261ca65c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1537,7 +1537,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e8435fb7bf9b453d8229c32ac113472d",
+       "model_id": "92f2dd97bf4141939e7202f235b9bb88",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1597,7 +1597,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7635bf69d2a34f86a5a8b97d9b758abe",
+       "model_id": "0bdee891306045ceafa6dc66d342234f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1611,7 +1611,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5dee6e14eec44e9ea7d2f3c009956db1",
+       "model_id": "2e73906ea5514c0583e353c3a0f536bd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1625,7 +1625,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "43f29253450b42cfb01262233eda6777",
+       "model_id": "25363857a1d74185a3e4eeaa630da516",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1651,7 +1651,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4ae8d6a1d2f462184feb2aefbbab5ae",
+       "model_id": "9e7a06abf2b8409fac827bee1ede6b29",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1665,7 +1665,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e94b99c9c79a40aeb1fd1db04c4fb18f",
+       "model_id": "9baf6789704346c69979a7d6aa8ef1ff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1890,13 +1890,14 @@
     "    fdir_modelruninput = os.path.join(os.environ['mf_root'],r'ipyrun\\examples\\testproject\\05 Model Files') \n",
     "    fdir_data = os.path.join(os.environ['mf_root'],r'ipyrun\\examples\\testproject\\datadriven\\data')\n",
     "    fdir_scripts = os.path.join(os.environ['mf_root'],r'ipyrun\\examples\\testproject\\datadriven\\src')\n",
-    "\n",
+    "    display_ignore = ['.jpg','.jpeg','.png','.xlsx']\n",
     "    # Create Model Run Outputs\n",
     "    fpth_create_script = os.path.join(fdir_scripts,r'create_model_run_file.py')\n",
     "\n",
     "    create_config = {\n",
     "        'fpth_script':os.path.realpath(fpth_create_script),\n",
     "        'fdir':os.path.join(fdir_scripts),\n",
+    "        'display_ignore':display_ignore,\n",
     "        \"script_outputs\": {\n",
     "            '0': {\n",
     "                'fdir':'.', # relative to the location of the App / Notebook file\n",
@@ -1922,6 +1923,7 @@
     "    compare_config = {\n",
     "        'fpth_script':os.path.realpath(fpth_comp_script),\n",
     "        'fdir':fdir_scripts,\n",
+    "        'display_ignore':display_ignore,\n",
     "        'script_outputs': {\n",
     "            '0': {\n",
     "                    'fdir':os.path.realpath(fdir_comp_out),\n",
@@ -1943,6 +1945,13 @@
     "    display(compare_runs)\n",
     "    display(Markdown('---'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
