--- a/ipyrun/overheating-app.ipynb
+++ b/ipyrun/overheating-app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +33,12 @@
     "\n",
     "# from this repo\n",
     "# this is an unpleasant hack. should aim to find a better solution\n",
+    "from ipyrun import *\n",
     "try:\n",
     "    from ipyrun._runconfig import RunConfig\n",
     "    from ipyrun._ipyeditcsv import EditCsv\n",
     "    from ipyrun._ipyeditjson import EditJson\n",
     "    from ipyrun._ipydisplayfile import DisplayFile, DisplayFiles\n",
-    "    from ipyrun import *\n",
     "except:\n",
     "    from _runconfig import RunConfig\n",
     "    from _ipyeditcsv import EditCsv\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -108,7 +108,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5f9f8fff78e845a9bb2c6620f45ac0ac",
+       "model_id": "ab240feb32e1412abed5aba77affe77f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -122,7 +122,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "723e734163404e34b4670664dca75d67",
+       "model_id": "3cd2b262ec114092b5b1ff37bcc18b5f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -136,7 +136,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b349c610e9d44af9e618a26c006f67c",
+       "model_id": "24e96df5897a4c35a0bd7d4f0d47a1b4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -186,7 +186,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2af12d7c91ee4d21afacd4b9978ca3c6",
+       "model_id": "2713db0bec854e9b8fcd8dd74d3f94cd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -200,7 +200,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64ddab71b0374996a699684e7e71f556",
+       "model_id": "197d0f29588747cda9a3b9b0fd53daff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -223,13 +223,15 @@
     "    fdir_modelruninput = os.path.join(os.environ['mf_root'],r'ipyrun\\examples\\testproject\\05 Model Files') \n",
     "    fdir_data = os.path.join(os.environ['mf_root'],r'ipyrun\\examples\\testproject\\datadriven\\data')\n",
     "    fdir_scripts = os.path.join(os.environ['mf_root'],r'ipyrun\\examples\\testproject\\datadriven\\src')\n",
-    "\n",
+    "    display_ignore = ['.jpg','.jpeg','.png','.xlsx']\n",
+    "    \n",
     "    # Create Model Run Outputs\n",
     "    fpth_create_script = os.path.join(fdir_scripts,r'create_model_run_file.py')\n",
     "\n",
     "    create_config = {\n",
     "        'fpth_script':os.path.realpath(fpth_create_script),\n",
     "        'fdir':os.path.join(fdir_scripts),\n",
+    "        'display_ignore':display_ignore,\n",
     "        \"script_outputs\": {\n",
     "            '0': {\n",
     "                'fdir':'.', # relative to the location of the App / Notebook file\n",
@@ -255,6 +257,7 @@
     "    compare_config = {\n",
     "        'fpth_script':os.path.realpath(fpth_comp_script),\n",
     "        'fdir':fdir_scripts,\n",
+    "        'display_ignore':display_ignore,\n",
     "        'script_outputs': {\n",
     "            '0': {\n",
     "                    'fdir':os.path.realpath(fdir_comp_out),\n",
@@ -264,6 +267,7 @@
     "        },\n",
     "        'fdir_compareinputs': fdir_interim_data\n",
     "    }    \n",
+    "\n",
     "\n",
     "    runapps = RunAppsMruns(di=create_config, fdir_input=fdir_modelruninput, fdir_data=fdir_interim_data, fdir_analysis=fdir_tm59)  \n",
     "    compare_runs = RunAppComparison(compare_config)  \n",
@@ -279,13 +283,6 @@
     "    display(Markdown('''Choose multiple runs, which can be compared'''))\n",
     "    display(compare_runs)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
