--- a/ipyrun/_ipydisplayfile.ipynb
+++ b/ipyrun/_ipydisplayfile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,12 +282,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "class DisplayFiles():\n",
-    "    def __init__(self, fpths):\n",
+    "    def __init__(self, fpths, fpths_ignore=[]):\n",
     "        self.out = widgets.Output();\n",
     "        fpths_temp = copy.deepcopy(fpths)\n",
     "        \n",
@@ -301,12 +301,13 @@
     "            if '.' not in fpth:\n",
     "                self.fpths.remove(fpth)\n",
     "                self.fpths += recursive_glob(rootdir=fpth)\n",
-    "\n",
-    "        y = ['.xlsx']\n",
-    "        for fpth in self.fpths:\n",
-    "            if os.path.splitext(fpth)[1].lower() not in y:\n",
-    "                self.fpths.remove(fpth)\n",
     "                \n",
+    "        fpths_temp = copy.deepcopy(self.fpths)\n",
+    "        \n",
+    "        for fpth in fpths_temp: \n",
+    "            ext = os.path.splitext(fpth)[1].lower()\n",
+    "            if (ext in fpths_ignore) or (ext not in DisplayFile()._map.keys()):\n",
+    "                self.fpths.remove(fpth)\n",
     "        self.fnms = [os.path.basename(fpth) for fpth in self.fpths];\n",
     "        self._init_previews()\n",
     "        self._init_form()\n",
@@ -332,7 +333,7 @@
     "        self.outputsfpth.observe(self._show_hide, 'value')\n",
     "    \n",
     "    def display_previews(self):\n",
-    "        print(self.outputsfpth.value)\n",
+    "        #print(self.outputsfpth.value)\n",
     "        for file in self.outputsfpth.value:\n",
     "            display(Markdown('#### {0}'.format(os.path.splitext(os.path.basename(file))[0])))\n",
     "            s = str(self.map_previews[file]._map[self.map_previews[file].ext])\n",
@@ -359,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "lines_to_end_of_cell_marker": 2,
     "lines_to_next_cell": 0
@@ -392,7 +393,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8830df59051943a28cb72b416bab30c1",
+       "model_id": "387110c20ed94093a810ff0801fca025",
        "version_major": 2,
        "version_minor": 0
       },
@@ -461,7 +462,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "020eb99718874fe9917041b106b7076e",
+       "model_id": "88f80d64737840708a9c0e729290b6d8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -475,12 +476,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff2e9b55b7d34e9aac06fde21cdd92ed",
+       "model_id": "85eca1c26d2b4b118ebfc10735c8e4fe",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "SelectMultiple(layout=Layout(flex_flow='column', height='auto', width='auto'), options=('eg_docx.docx', 'eg_jp…"
+       "SelectMultiple(layout=Layout(flex_flow='column', height='auto', width='auto'), options=('eg_csv.csv', 'eg_docx…"
       ]
      },
      "metadata": {},
@@ -489,7 +490,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9b7635ffc0e74325a027082dae11d3f4",
+       "model_id": "a7b5de72250a474580f1657e4e7feed6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -549,7 +550,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5dffa28c956f4a439f9b481624078292",
+       "model_id": "13e78dae321f4fbb948a571421b5b849",
        "version_major": 2,
        "version_minor": 0
       },
@@ -563,12 +564,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d0e842110d9d42159bdf112f6605bc45",
+       "model_id": "d04476eda68548d99a8e28ead16e88b8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "SelectMultiple(layout=Layout(flex_flow='column', height='auto', width='auto'), options=('eg_jpg_2.jpg',), valu…"
+       "SelectMultiple(layout=Layout(flex_flow='column', height='auto', width='auto'), options=('000_test_TM59results.…"
       ]
      },
      "metadata": {},
@@ -577,7 +578,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7667f41e43847b984656586344ba7d1",
+       "model_id": "53edbbc419124dd9860d76103aa040de",
        "version_major": 2,
        "version_minor": 0
       },
@@ -628,7 +629,7 @@
     "    display(Markdown('')) \n",
     "    \n",
     "    fdir_eg = os.path.realpath(os.path.join(fdir,'eg_dir'))\n",
-    "    d2= DisplayFiles(fdir_eg)\n",
+    "    d2= DisplayFiles(r'C:\\engDev\\git_mf\\ipyrun\\examples\\testproject\\datadriven\\data\\processed\\tm59')\n",
     "    display(Markdown('### Example3'))\n",
     "    display(Markdown('''display eg directory'''))\n",
     "    display(d2)"
@@ -644,51 +645,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "lines_to_next_cell": 2
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": []
   }
